--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   </head>
   <body class="dark-theme">
     <include src="./partials/header.html"></include>
+    <include src="./partials/anime.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
