--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/anime.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal.html"></include>
   </body>
 </html>
