add simple theme switching

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Josefin+Sans:wght@400;600;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body class="dark-theme">
+  <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/anime.html"></include>
     <include src="./partials/footer.html"></include>
