--- a/src/library.html
+++ b/src/library.html
@@ -19,5 +19,6 @@
     <include src="./partials/anime-library.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
+    <include src="./partials/modal-accept.html"></include>
   </body>
 </html>
