--- a/src/library.html
+++ b/src/library.html
@@ -17,6 +17,10 @@
 <body>
     <include src="./partials/headerLibrary.html"></include>
     <include src="./partials/anime-library.html"></include>
+    <div id="anime-pagination tui-pagination-container" class="tui-pagination">
+      <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+
+    </div>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/modal-accept.html"></include>
