--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <include src="./partials/anime.html"></include>
+    <main class="anime">
+      <include src="./partials/quotes.html"></include>
+      <include src="./partials/anime.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
   </body>
